--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "connect-four",
+  "name": "Connect4",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,7 +23,7 @@
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^7.18.0",
     "vue-router": "3.0.7",
     "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.11"
