--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "gh-pages": "^3.2.3",
+    "git-pages": "^0.8.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2"
